--- a/test/log4cxx.properties
+++ b/test/log4cxx.properties
@@ -13,7 +13,7 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-5p %c : %m%n
 
 # creates file trajectory_coefficients.log to plot with matlab function display_trajectory.m
-log4j.appender.Amat.File=${XPP_ROOT}/test/matlab/trajectory_coefficients.log
+log4j.appender.Amat.File=../test/matlab/trajectory_coefficients.log
 log4j.appender.Amat.layout=org.apache.log4j.PatternLayout
 log4j.appender.Amat.layout.ConversionPattern=%m%n
 log4j.appender.Amat=org.apache.log4j.RollingFileAppender
