--- a/package.xml
+++ b/package.xml
@@ -40,4 +40,9 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  
+  <build_depend>log4cxx</build_depend>
+  <run_depend>log4cxx</run_depend>
+  
+  
 </package>
