--- a/package.xml
+++ b/package.xml
@@ -44,5 +44,8 @@
   <build_depend>log4cxx</build_depend>
   <run_depend>log4cxx</run_depend>
   
+  <build_depend>message_generation</build_depend>
+  <run_depend>message_runtime</run_depend>
+  
   
 </package>
