--- a/package.xml
+++ b/package.xml
@@ -42,6 +42,8 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <build_depend>log4cxx</build_depend>
+  <build_depend>roscpp</build_depend>
+  
   <run_depend>log4cxx</run_depend>
   
   <build_depend>message_generation</build_depend>
