unconstrained solving with ipopt working

--- a/test/log4cxx.properties
+++ b/test/log4cxx.properties
@@ -1,6 +1,6 @@
 # Set root logger level to DEBUG and its only appender to A1.
 # TRACE < DEBUG < INFO < WARN < ERROR < FATAL < OFF
-log4j.rootLogger=INFO, A1
+log4j.rootLogger=WARN, A1
 
 # these loggers should not inherit any appenders from parent loggers
 log4j.additivity.matlab=false
