--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,7 +117,8 @@ if(BUILD_TESTS)
   if(GTEST_FOUND)
     set(MY_GTEST_UNITS  test/google/gtest_main.cc 
                         test/google/spliner_test.cc
-                        test/google/point_sorting_test.cc)
+                        test/google/point2d_manipulations_test.cc
+                        test/google/supp_polygon_test.cc)
                
     add_executable(googleTest ${MY_GTEST_UNITS})
     
