added zmp publisher to publish rviz solution during nlp optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,7 @@ set(SOURCES
   src/cost_function.cc
   src/constraints.cc
   src/zmp_constraint.cc
+  src/zmp_publisher.cc
 )
              
 # Add the shared library
