moved spline constraints (initial, final, junction) to separate class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ set(SOURCES
   src/zmp_constraint.cc
   src/zmp_publisher.cc
   src/ellipse.cc
+  src/spline_constraints.cc
 )
              
 # Add the shared library
