Split optimization into srv optimize() and srv returnValue()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_message_files(
 add_service_files(
   FILES
   OptimizeTrajectory.srv
+  ReturnOptimizedTrajectory.srv
 )
 generate_messages(
   DEPENDENCIES
