allow support_polygon_container to be initialized with steps or only sequence.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,10 +187,10 @@ if(BUILD_TESTS)
                         test/google/spliner_test.cc
                         test/google/point2d_manipulations_test.cc
                         test/google/supp_polygon_test.cc
-                        #test/google/supp_polygon_container_test.cc
+                        test/google/supp_polygon_container_test.cc
                         test/google/spline_container_test.cc
                         test/google/helpers.cc
-                        ##test/google/eigen_num_diff_test.cc
+                        #test/google/eigen_num_diff_test.cc
                         )
                
     add_executable(googleTest ${MY_GTEST_UNITS})
