--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,6 +197,7 @@ if(BUILD_TESTS)
                         test/google/helpers.cc
                         test/google/zmp_constraint_test.cc
                         test/google/zero_moment_point_test.cc
+                        test/google/hyq_spliner_test.cc
                         #test/google/eigen_num_diff_test.cc
                         )
                
