--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ set(SOURCES
   src/constraint_container.cc
   src/zmp_constraint.cc
   src/range_of_motion_constraint.cc
+  src/spline_junction_constraint.cc
 )
              
 # Add the shared library
@@ -216,6 +217,7 @@ if(BUILD_TESTS)
                         test/google/zmp_constraint_test.cc
                         test/google/constraint_container_test.cc
                         test/google/range_of_motion_constraint_test.cc
+                        test/google/spline_junction_constraint_test.cc
                         )
                
     add_executable(googleTest ${MY_GTEST_UNITS})
