added same observer structure to cost function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,10 @@ set(SOURCES
   src/constraint_container.cc
   src/zmp_constraint.cc
   src/range_of_motion_constraint.cc
+  # costs
+  src/a_quadratic_cost.cc
+  src/total_acceleration_equation.cc
+  src/cost_container.cc
 )
              
 # Add the shared library
@@ -215,6 +219,10 @@ if(BUILD_TESTS)
                         test/google/zmp_constraint_test.cc
                         test/google/constraint_container_test.cc
                         test/google/range_of_motion_constraint_test.cc
+                        # costs
+                        test/google/a_quadratic_cost_test.cc
+                        test/google/total_acceleration_equation_test.cc
+                        test/google/cost_container_test.cc
                         )
                
     add_executable(googleTest ${MY_GTEST_UNITS})
