renamed nlp_optimizer to nlp_facade (design pattern)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,7 +97,7 @@ set(SOURCES
   src/geometric_structs.cc
   src/qp_optimizer.cc
   src/foothold.cc
-  src/nlp_optimizer.cc
+  src/nlp_facade.cc
   src/zmp_spline.cc
   src/spline_container.cc    
   src/continuous_spline_container.cc    
@@ -213,7 +213,7 @@ if(BUILD_TESTS)
                         test/google/helpers.cc
                         test/google/zmp_constraint_builder_test.cc
                         test/google/zero_moment_point_test.cc
-                        test/google/nlp_optimizer_test.cc
+                        test/google/nlp_facade_test.cc
                         test/google/hyq_spliner_test.cc
                         #test/google/eigen_num_diff_test.cc
 #                        test/google/optimization_variables_test.cc
